Add Dark Mode and remove height

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,8 @@
 	</div>
 	<h2>Destination Search</h2>
 	<div style="width:250px;">
-		<destination-search fetch="https://cors-anywhere.herokuapp.com/https://travel-dealz.de"><input></destination-search>
+		<destination-search fetch="https://cors-anywhere.herokuapp.com/https://travel-dealz.de" dark="true">
+			<input></destination-search>
 	</div>
 </body>
 
