--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,10 @@
 	</div>
 	<h2>Destination Search</h2>
 	<div style="width:250px;">
-		<destination-search fetch="https://cors-anywhere.herokuapp.com/https://travel-dealz.de" dark="true">
-			<input></destination-search>
+		<destination-search endpoint="https://cors-anywhere.herokuapp.com/https://travel-dealz.de/wp-json/wp/v2/origins"
+			dark="true">
+			<input>
+		</destination-search>
 	</div>
 </body>
 
