--- a/www/index.html
+++ b/www/index.html
@@ -30,13 +30,13 @@
 	</div>
 	<h2>Destination Search</h2>
 	<div style="width:250px;">
-		<destination-search fetch="https://cors-anywhere.herokuapp.com/https://travel-dealz.de/wp-json/wp/v2/destinations"
-			dark="true">
+		<destination-search
+			endpoint="https://cors-anywhere.herokuapp.com/https://travel-dealz.de/wp-json/wp/v2/destinations" dark="true">
 			<input>
 		</destination-search>
 		<h2>Origins Search</h2>
 		<div style="width:250px;">
-			<destination-search fetch="https://cors-anywhere.herokuapp.com/https://travel-dealz.de/wp-json/wp/v2/origins"
+			<destination-search endpoint="https://cors-anywhere.herokuapp.com/https://travel-dealz.de/wp-json/wp/v2/origins"
 				dark="true">
 				<input>
 			</destination-search>
