--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,12 @@
 				<input>
 			</destination-search>
 		</div>
+		<h2>Hotel Search</h2>
+		<div style="width:250px;">
+			<hotel-search dark="true">
+				<input>
+			</hotel-search>
+		</div>
 </body>
 
 </html>
